--- a/phase2/phase2/todo.txt
+++ b/phase2/phase2/todo.txt
@@ -22,7 +22,8 @@ Note
    check that these methods don't need to be used before deleting (i.e. if
    the method should be called in the main method but isn't yet, don't delete it!)
 
-charitable donations, currency exchange,
+ATM Time: get current year, get current month
+
 
 Phase 1 Markus comments
 
