Made a note of unused methods and added necessary javadoc in AccountManager

--- a/phase2/phase2/todo.txt
+++ b/phase2/phase2/todo.txt
@@ -23,6 +23,7 @@ Note
    the method should be called in the main method but isn't yet, don't delete it!)
 
 ATM Time: get current year, get current month
+Account Manager: 1 constructor isnt used
 
 
 Phase 1 Markus comments
