Made a note of unused methods and added necessary javadoc in AssetAccount

--- a/phase2/phase2/todo.txt
+++ b/phase2/phase2/todo.txt
@@ -24,7 +24,7 @@ Note
 
 ATM Time: get current year, get current month
 Account Manager: 1 constructor isnt used
-
+Asset Account: some Constructors arent used
 
 Phase 1 Markus comments
 
