Refactored and made note of unused methods in Data Saver, Write File

--- a/phase2/phase2/todo.txt
+++ b/phase2/phase2/todo.txt
@@ -32,6 +32,8 @@ Unused Methods
 ATM Time: get current year, get current month
 Account Manager: 1 constructor isnt used
 Chequing getisPrimary
+Datasaver class is not used
+Write File
 
 Phase 1 Markus comments
 
