Refactored and made note of unused methods in Bank Employee

--- a/phase2/phase2/todo.txt
+++ b/phase2/phase2/todo.txt
@@ -34,6 +34,7 @@ Account Manager: 1 constructor isnt used
 Chequing getisPrimary
 Datasaver class is not used
 Write File
+Bank Employee undo transaction
 
 Phase 1 Markus comments
 
