--- a/phase2/phase2/todo.txt
+++ b/phase2/phase2/todo.txt
@@ -35,6 +35,9 @@ Chequing getisPrimary
 Datasaver class is not used
 Write File
 Bank Employee undo transaction
+Bank Mnaager: setdate
+Bank Teller: createuseraccount, getrequest, getrequestsummary, ignore request, complete request
+
 
 Phase 1 Markus comments
 
