Refactored and made note of unused methods in User, UserManaager

--- a/phase2/phase2/todo.txt
+++ b/phase2/phase2/todo.txt
@@ -37,7 +37,8 @@ Write File
 Bank Employee undo transaction
 Bank Mnaager: setdate
 Bank Teller: createuseraccount, getrequest, getrequestsummary, ignore request, complete request
-
+User: request account, request undo,
+User Manager: isbankmanager, getuseraccount
 
 Phase 1 Markus comments
 
