Refactored and made note of unused methods in all request classes

--- a/phase2/phase2/todo.txt
+++ b/phase2/phase2/todo.txt
@@ -39,6 +39,7 @@ Bank Mnaager: setdate
 Bank Teller: createuseraccount, getrequest, getrequestsummary, ignore request, complete request
 User: request account, request undo,
 User Manager: isbankmanager, getuseraccount
+Account Request, Undo request: getrequester, get accounttype
 
 Phase 1 Markus comments
 
