added print to addAccountOwner method

--- a/phase2/phase2/todo.txt
+++ b/phase2/phase2/todo.txt
@@ -15,8 +15,8 @@ Presentation
 - Anna (Transactions)
 - Shourya (Display)
 - Fatema (Request, ForeignCurrency)
-- Dani (Accounts)
-- Arjun (Data)
+- Dani (Asset and Debt Accounts)
+- Arjun (Data, Investment Accounts)
 
 Unused Methods
 WriteFile
